# cnn_with_cifar10

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
data/: test_label.txt  train_label.txt
src/cnn/: train.py
src/utils/: helpers.py  unpack.py  visualize.py
